--- a/bridges-2026/Gilbert.tex
+++ b/bridges-2026/Gilbert.tex
@@ -506,24 +506,53 @@ without concern for optimizing defect reduction.
 
 \section*{Algorithm}
 
-Algorithm \ref{alg:gilbert2d} shows the pseudo-code for computing the 2D Gilbert curve.
-Note that $\alpha$ and $\beta$ are taken to be vectors in 3D, where the third dimension
-can be ignored if a purely 2D curve is desired.
+
+Algorithm \ref{alg:gilbert2d} and algorithm \ref{alg:gilbert3d} shows the pseudo-code for computing the Gilbert curve in
+2D and 3D respectively.
+After each subdivision, the origion and local axies are rotated to align with the sub
+region and recursively solved.
+In the base case where there is a unit length side, a curve in one lower dimension is output (a line for 2D and a 2D Gilbert curve for 3D).
+If the width like dimension, $\alpha$, is oblong relative to the height-like dimension, $\beta$,
+an eccentric template is used.
+For the 3D case, additional checks to see if the remaining side lengths are oblong and, if so, the appropriate eccentric curves are applied.
+Otherwise, the bulk recursion is executed.
+
+
+%Algorithm \ref{alg:gilbert2d} shows the pseudo-code for computing the 2D Gilbert curve.
+%After each subdivision, the origion and local axies are rotated to align with the sub
+%region and recursively solved.
+%In the base case where there is a unit length side, a line is output.
+%If the width like dimension, $\alpha$, is oblong relative to the height-like dimension, $\beta$,
+%an eccentric template is used.
+%Otherwise, the bulk recursion is executed on the three partioned regions.
+
+Note that even in the 2D case, $\alpha$ and $\beta$ are taken to be vectors in 3D.
+%, where the third dimension can be ignored if a purely 2D curve is desired.
 The generalization to 3D allows the Gilbert2D function to be used unaltered when the
 3D Gilbert curve needs to trace out in-plane sub-curves.
 
-Algorithm \ref{alg:gilbert2d} assumes standard Euclidean two norm ($|v| = \sqrt{v_0^2 + v_1^2 + v_2^2}$)
-and abuses notation by allowing scalar to vector multiplication ($i \in \mathbb{Z}, v \in \mathbb{Z}^3, i \cdot v \to ( i \cdot v_0, i \cdot v_1, i \cdot v_2 )$).
+%Algorithm \ref{alg:gilbert2d} assumes 
+The standard Euclidean two norm ($|v| = \sqrt{v_0^2 + v_1^2 + v_2^2}$) is used
+but abuses notation by allowing scalar to vector multiplication ($i \in \mathbb{Z}, v \in \mathbb{Z}^3, i \cdot v \to ( i \cdot v_0, i \cdot v_1, i \cdot v_2 )$).
 where the context is clear.
 The $\delta(\cdot)$ function returns one of the six directional vectors indicating which of
 the major signed axis aligned directions the input vector points to ($(\pm1,0,0), (0,\pm1,0),(0,0,\pm1)$).
+The $\div(a,b)$ function is used to do integer division, rounding towards zero in the case of a fractional result.
 To make things more concise, a convenience function is used,
 $(\Delta( \rho_2,\rho ) \overset{\mathrm{def}}{=} \delta(\rho) \textbf{ if } |\rho _ 2| \equiv 1 \bmod{2} \text{ and } |\rho| > 2)$,
 that prefers even lengths in the non-degenerate case.
 
-Algorithm \ref{alg:gilbert3d} shows pseudo-code for computing the 3D Gilbert curve.
-Figures \ref{fig:gilbert3d_eccentric_alpha}, \ref{fig:gilbert3d_eccentric_alpha_example} show the various shape templates
-used to subdivide the region and an example curve with color coded regions.
+Random access functions to convert from index to position or position to index can be created by modifying the presented algorithms
+with short circuit conditionals, bypassing path calculation but keeping a running total of positions that would have been traversed.
+Each subregion is an axis-aligned rectangle or cuboid, allowing for easy calculation of path length as the product of the side lengths for
+the given area or volume.
+
+%Algorithm \ref{alg:gilbert3d} shows pseudo-code for computing the 3D Gilbert curve.
+%Figures \ref{fig:gilbert3d_eccentric_alpha}, \ref{fig:gilbert3d_eccentric_alpha_example} show the various shape templates
+%used to subdivide the region and an example curve with color coded regions.
+%As with the \textit{Gilbert2D} function, base cases occur when one dimension is unit length, eccentric templates are used
+%for oblong side lengths and the bulk recursion is executed in all other cases.
+
 
 
 \section*{Conclusion and Future Directions}
@@ -562,6 +591,16 @@ repository \footnote{ \label{gilbert-url} \url{https://github.com/jakubcerveny/g
 
 
   \bibitem{lutanho2003} L. Tautenhahn. ``Draw a space-filling curve of arbitrary size.'' 2003. \url{https://lutanho.net/pic2html/draw_sfc.html}.
+
+  \bibitem{anders2009} S. Anders. ``Visualization of genomic data with the Hilbert curve.'' 2009. 10.1093/bioinformatics/btp152.
+
+  \bibitem{zhang2006} J. Zhang, S. Kamata, and Y. Ueshige. ``A Pseudo-hilbert Scan Algorithm for Arbitrarily-Sized Rectangle Region.'' 10.1007/11821045 31.
+
+  \bibitem{cortesi2011} A. Cortesi. ``Visualizing binaries with space-filling curves.'' \url{https://corte.si/posts/visualisation/binvis/}.
+
+  \bibitem{sagan1994} H. Saga. ``Space-Filling Curves.'' 9783540942658.
+
+
 
 
 %
