--- a/bridges-2026/Gilbert.tex
+++ b/bridges-2026/Gilbert.tex
@@ -384,18 +384,18 @@ without concern for optimizing defect reduction.
   \begin{minipage}[ht]{0.95\linewidth}
 
     \centering
-    \includegraphics[width=0.925\linewidth]{gilbert2d_eccentric_simple.pdf}
+    \includegraphics[width=0.925\linewidth]{gilbert2d_bulk.pdf}
     \captionof{figure}{ }
-    \label{fig:eccentric_2d_alg1}
+    \label{fig:gilbert2d_bulk}
 
   \end{minipage}
 
   \begin{minipage}[ht]{0.95\linewidth}
 
     \centering
-    \includegraphics[width=1.0\linewidth]{gilbert2d_example_eccentric.pdf}
+    \includegraphics[width=1.0\linewidth]{gilbert2d_bulk_example.pdf}
     \captionof{figure}{ }
-    \label{fig:eccentric_2d_example_alg1}
+    \label{fig:eccentric_2d_bulk_example}
 
   \end{minipage}
 
