--- a/bridges-2026/Gilbert.tex
+++ b/bridges-2026/Gilbert.tex
@@ -495,8 +495,8 @@ without concern for optimizing defect reduction.
 	\end{minipage}\hfill
 	\begin{minipage}{0.49\textwidth}
 		\centering
-		\includegraphics[width=\linewidth]{gilbert3d_eccentric_alpha_example.pdf}
-		\label{fig:gilbert3d_eccentric_alpha_example_zzz}
+		\includegraphics[width=\linewidth]{gilbert3d_bulk_example.pdf}
+		\label{fig:gilbert3d_bulk_example}
 		\captionof{figure}{ }
 	\end{minipage}
 
