--- a/bridges-2026/Gilbert.tex
+++ b/bridges-2026/Gilbert.tex
@@ -489,8 +489,8 @@ without concern for optimizing defect reduction.
 
 	\begin{minipage}{0.49\textwidth}
 		\centering
-		\includegraphics[width=\linewidth]{gilbert3d_eccentric_alpha.pdf}
-		\label{fig:gilbert3d_eccentric_alpha_zzz}
+		\includegraphics[width=\linewidth]{gilbert3d_bulk_template.pdf}
+		\label{fig:gilbert3d_bulk_template}
 		\captionof{figure}{ }
 	\end{minipage}\hfill
 	\begin{minipage}{0.49\textwidth}
